--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
-    "production": "pm2 src/server.js --name my-money-backend"
+    "production": "pm2 start src/server.js --name my-money-backend"
   },
   "keywords": [],
   "author": "",
